<resources>
    <string name="app_name">East Asian Studies</string>
    <string name="navigationDrawerOpen">Open navigation Drawer</string>
    <string name="navigationDrawerClose">Close navigation Drawer</string>
    <string name="aboutus">Taking note of the importance of the East Asian region to both Indian and global policy formulations, the ‘Centre for East Asian Studies’ is dedicated to enhance the understanding of the region in the country and beyond. The scope of East Asia is the entire continental and maritime geographical region east of India. The Centre’s pursuit of excellence in the East Asian region will be in consonance with India’s ‘Look/Act East Policy’. The forte of the Centre lies in looking at the East Asian region from an Indian perspective with a special emphasis on South India. This perspective is considered vital because of the fact that countries of the region are keen to connect with and know more about the southern states of India. Each of the Indian states is also keen to connect with the outside world, especially the eastern part of the globe, for various politico-economic and socio-cultural reasons. The Centre, therefore, has a special focus on Federal units’ reach to the East Asian region and vice versa. In doing so, at the same time, the national perspective will not be lost.</string>
    <string name="ChinaHome">China Home</string>
    <string name="contentDescription">Some Content</string>
    <string name="JapanHome">Japan Home</string>
    <string name="home">Home</string>
    <string name="higher_education">Higher Education</string>
    <string name="fellowship_scholarship">Fellowship/Scholarship</string>
    <string name="exchanges">Exchanges</string>
    <string name="conferences">Conferences</string>
    <string name="internships">Internships</string>
    <string name="about_us">About us</string>
    <string name="fellowship">FellowShip</string>
    <string name="financial_aid">Financial Aid</string>
    <string name="university">University</string>
    <string name="fund_agencies">Fund Agencies</string>
    <string name="imageview">Imageview</string>
    <string name="floating_action_button">floating action button</string>
    <string name="textview">textview</string>
    <string name="japan">Japan</string>
    <string name="china">CHINA</string>
    <string name="select_region_to_explore">Select region to explore</string>
    <string name="korea">Korea</string>
    <string name="south_east_asia">South East Asia</string>
    <string name="indo_pacific">Indo Pacific</string>
    <string name="fellowship_details">Fellowship details</string>
    <string name="details_about_financial_aid">Details about financial aid</string>
    <string name="details_about_universities">Details about universities</string>
    <string name="details_of_funding_agencies">Details of funding agencies</string>
    <string name="east_asian_studies">East Asian Studies</string>
<!--firebase data-->
<!--China-->
    <string name="china_home">Details about China</string>
    <string name="china_home_conference">Home conferences screen of China</string>
    <string name="china_home_education">Home education screen of China</string>
    <string name="china_home_exchanges">Home exchanges screen of China</string>
    <string name="china_home_internships">Home internship screen of China</string>
    <string name="china_home_fellowships">Home fellowship screen of China</string>
    <string name="china_home_scholarships">Home scholarship screen of China</string>
    <string name="china_home_financial_aid">Home financial aid screen of China</string>
    <string name="china_home_funding_agencies">Home funding agencies screen of China</string>
    <string name="china_home_universities">Home universities screen of China</string>
    <string name="educationdetails1">⚫ The educational system in China is a major vehicle for both inculcating values in and teaching needed skills to its people.</string>
    <string name="educationdetails2">⚫ Traditional Chinese culture attached great importance to education as a means of enhancing a person’s worth and career.</string>
    <string name="educationdetails3">⚫ The Chinese educational structure provides for six years of primary school, three years each of lower secondary school and upper secondary school, and four years in the standard university curriculum.</string>
    <!--Japan-->
<!--Korea-->
<!--Indo-Pacific-->
<!--South-East-Asia-->
</resources>