<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/mortarboard"
            android:title="@string/higher_education" />
        <item
            android:id="@+id/nav_scholarship"
            android:icon="@drawable/scholarship"
            android:title="@string/fellowship_scholarship" />
        <item
            android:id="@+id/nav_exchanges"
            android:icon="@drawable/exchange"
            android:title="@string/exchanges" />
        <item
            android:id="@+id/nav_conferences"
            android:icon="@drawable/conference"
            android:title="@string/conferences" />
        <item
            android:id="@+id/nav_internships"
            android:icon="@drawable/employee"
            android:title="@string/internships" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/contact"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_fellowship"
            android:icon="@drawable/baseline_groups_24"
            android:title="@string/fellowship" />
        <item
            android:id="@+id/nav_finAid"
            android:icon="@drawable/baseline_money_24"
            android:title="@string/financial_aid" />
        <item
            android:id="@+id/nav_univ_college"
            android:icon="@drawable/university"
            android:title="@string/university" />
        <item
            android:id="@+id/nav_fundAgencies"
            android:icon="@drawable/funds1"
            android:title="@string/fund_agencies" />

    </group>

</menu>