<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chinabghome"
    tools:context=".CountryHome">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.EastAsiaStudiesApplication">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@drawable/chinabghome"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/Theme.EastAsiaStudiesApplication"
            app:collapsedTitleTextAppearance="@style/Theme.EastAsiaStudiesApplication"
            android:background="@drawable/chinabghome"
            android:id="@+id/collapsing_toolbar_countryhome">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>



        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <TextView
                android:id="@+id/textViewCountryHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/noto"
                android:text="@string/china_home"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewChinaDetails1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/noto"
                    android:text="@string/educationdetails1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="35dp"
                    app:flow_horizontalAlign="center"/>

                <TextView
                    android:id="@+id/textViewChinaDetails2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/noto"
                    android:text="@string/educationdetails2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    app:flow_horizontalAlign="center"/>

                <TextView
                    android:id="@+id/textViewChinaDetails3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/noto"
                    android:text="@string/educationdetails3"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    app:flow_horizontalAlign="center"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mailhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:src="@drawable/baseline_email_24"
        app:fabSize="normal"
        android:fontFamily="@font/noto"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF9800"
        android:elevation="5dp"
        android:contentDescription="@string/floating_action_button"
        android:focusable="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>