<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?actionBarSize">-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:gravity="center"-->
<!--                android:text="East Asian Studies"-->
<!--                android:textAllCaps="true"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="30sp"-->
<!--                android:textStyle="bold" />-->
<!--        </RelativeLayout>-->

        <TextView
            android:layout_width="392dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_region_to_explore"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/china1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/chinaback1">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="35dp">

                    <TextView
                        android:id="@+id/chinatext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="40dp"
                        android:text="@string/china"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/japan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/japanback">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:text="@string/japan"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text=""
                        android:contentDescription="@string/floating_action_button"
                        android:textColor="@color/black" />
                </RelativeLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/korea1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/koreaback">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:text="@string/korea"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/southeastasia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/asean">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110sp"
                        android:padding="25dp"
                        android:text="@string/south_east_asia"
                        android:textColor="@color/white"
                        android:textSize="27sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/indopacific1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/indopacific">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="85sp"
                        android:padding="25dp"
                        android:text="@string/indo_pacific"
                        android:textColor="@color/black"
                        android:textSize="27sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>